# JoD6Em

./: .clang-format  .clangd  .gitignore  format_files.sh  jod.code-workspace  uncrustify.cfg
Client/: build.sh  run.sh  start.sh  stop.sh
Client/ClientSource/: Main.cpp  main.cpp
Client/ClientSource/ClientCore/: ClientEngine.cpp  ClientEngine.h  ClientEngine.hpp  RunNewClientInstance.cpp  RunNewClientInstance.h  RunNewClientInstance.hpp  client_engine.cpp  client_engine.h  run_new_client_instance.cpp
Client/ClientSource/Common/: Aliases.h  Aliases.hpp  CanvasUtilities.cpp  CanvasUtilities.h  CanvasUtilities.hpp  FileUtilities.cpp  FileUtilities.h  FileUtilities.hpp  MouseUtilities.cpp  MouseUtilities.h  MouseUtilities.hpp  SDLDeleter.cpp  SDLDeleter.h  SDLDeleter.hpp  aliases.h  canvas_utilities.cpp  file_utilities.h  mouse_utilities.cpp
Client/ClientSource/StdAfx/: StdAfx.h  StdAfx.hpp  stdafx.h
Client/cmake/: CMakeLists.txt
Client/docker/: Dockerfile
Client/html/: shell_minimal.html
DevFiles/: CurrWorkingFile.txt
RunningServices/: build_all_services.sh  docker-compose.yaml  reset_all_services.sh
RunningServices/GameServerDocker/: Dockerfile  JoDServer  build.sh
RunningServices/NginxHTTPDocker/: Dockerfile  build.sh  index.data  index.html  index.js  index.wasm
RunningServices/PostgresDocker/: Dockerfile  build.sh  init.sql
Server/: build.sh  build_ninja.sh  debug.sh  run.sh
Server/ServerSource/: Main.cpp  main.cpp
Server/ServerSource/Common/: Aliases.h  Aliases.hpp
Server/ServerSource/Configuration/: GameProperties.cpp  GameProperties.h  GameProperties.hpp  ObjectEntry.hpp  ObjectFlags.hpp  ObjectsIndex.cpp  (+2 more)
Server/cmake/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja
Shared/SharedCommonSource/: CommonAliases.hpp  CommonUtils.cpp  CommonUtils.hpp  Timer.cpp  Timer.hpp
Shared/SharedNetSource/: MessageCodes.hpp  NetConfiguration.hpp
Shared/SharedSource/: CommonAliases.hpp  CommonUtils.cpp  CommonUtils.h  CommonUtils.hpp  MathLib.cpp  MathLib.h  MathLib.hpp  MessageCodes.h  MessageCodes.hpp  NetConfiguration.h  NetConfiguration.hpp  message_codes.h
Shared/SharedWorldStructureSource/: Creature.cpp  Creature.hpp  CreatureGroup.cpp  CreatureGroup.hpp  CreatureMaturity.hpp  Directions.hpp  Faction.hpp  NPC.hpp  Object.cpp  Object.hpp  ObjectMaturity.hpp  ObjectsPile.cpp  ObjectsPile.hpp  RoadPath.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp  WorldArea.cpp  WorldArea.hpp  WorldStructureAliases.hpp  WorldStructureConstants.hpp
WorkingDirectory/: ClientSource  ServerSource  SharedCommonSource  SharedNetSource  SharedWorldStructureSource  WorldEditorSource
WorldEditor/: build.sh  run.sh
WorldEditor/WorldEditorSource/: Canvas.cpp  Canvas.hpp  Main.cpp  Tools.hpp  Window.cpp  Window.hpp
WorldEditor/cmake/: CMakeLists.txt
client/: build.sh  start.sh
client/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
client/docker/: Dockerfile  JoDScriptServer  JourneyOfDreams.html  JourneyOfDreams.js  JourneyOfDreams.wasm  JourneyOfDreams.wasm.map
client/src/: Assets.cpp  Assets.h  Core.cpp  Core.h  Graphics.cpp  Graphics.h  Main.cpp  MathLib.cpp  MathLib.h  Net.cpp  Net.h  Rendering.cpp  Rendering.h  RenderingCore.cpp  RenderingCore.h  StdAfx.h  Util.cpp  Util.h  compile_commands.json  core.cpp  core.h  graphics.cpp  graphics.h  image_bank.cpp  image_bank.h  main.cpp  net.cpp  net.h  rendering.cpp  rendering.h  rendering_core.cpp  rendering_core.h  stdafx.h  util.cpp  util.h
server/: run.sh
server/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
server/cmake/.cache/clangd/index/: cmake_pch.hxx.8F992F605230C218.idx
server/src/: Client.cpp  Client.h  ClientCore.cpp  ClientCore.h  Configuration.h  Cursor.cpp  Main.cpp  Math.cpp  Math.h  MathLib.h  Net.cpp  Net.h  Player.cpp  Player.h  SceneComponents.cpp  SceneComponents.h  StdAfx.h  Util.cpp  Util.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h  client.cpp  client.h  client_core.cpp  client_core.h  compile_commands.json  configuration.h  cursor.cpp  cursor.h  main.cpp  math.cpp  math.h  net.cpp  net.h  player.cpp  player.h  scene_components.cpp  scene_components.h  (+5 more)
shared/src/: CommonUtils.cpp  CommonUtils.h  MathLib.cpp  MathLib.h  MessageCodes.h  NetConfiguration.h  common_utils.cpp  common_utils.h  math_lib.cpp  math_lib.h  message_codes.h  net_configuration.h
zmallwood-dev/: .tmux.conf  Dockerfile  conform.lua  core.lua  docker-compose.yaml  mason.lua  options.lua  run_neovim.sh  uncrustify.cfg
(+591 files in other folders)
